--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,6 @@
 }
 
 .po-item {
-    margin-right: 12px;
     margin-bottom: 16px;
     width: 22%;
 }
@@ -18,7 +17,7 @@
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    background: #0000001f;
+    border-bottom: solid 1px black;
     text-align: center;
     padding: 4px 6px;
 }
