--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 					<div class="bs-vertical-wizard-dot">{{step.step}}</div>
 					<div class="progress"><div class="progress-bar"></div></div>
 				</div>	
-			  <div class="bs-vertical-wizard-info text-center" *ngIf="isActive(step.status, index, module.CompleteData)">{{step.description}}</div>
+			  <div class="bs-vertical-wizard-info text-center" >{{step.description}}</div>
 			</div>
 		</div>
 
